--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   cloud_firestore: ^5.4.5
   provider: ^6.1.2
   lottie: ^3.2.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   dio: ^5.7.0
 
   # The following adds the Cupertino Icons font to your application.
@@ -68,6 +70,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.13
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
